<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView

        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="48dp"
        android:text="@string/AppDescription"

        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/FormLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:gravity="fill_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description">

        <TextView
            android:id="@+id/NameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/NameLabel"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/NameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/NameHint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/SurnameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SurnameLabel"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <EditText
            android:id="@+id/SurnameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/SurnameHint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/emailLabel"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailHint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonText" />

        <Button
            android:id="@+id/endButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onExit"
            android:text="@string/endText" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>